# Stoppable_MVE

./: CMakeLists.txt
cmake/: compiler_settings.cmake  macros.cmake
includes/: JobHandler.hpp  Stoppable.hpp  StoppableTask.hpp
sources/: CMakeLists.txt
sources/Example/: CMakeLists.txt  main.cpp
